k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kadianai-website
  namespace: kadianai-1
  labels:
    app.kubernetes.io/name: kadianai-website
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: kadianai-website
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
