k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kadianai-website
  namespace: kadianai-1
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - kadianailabs.com
        - www.kadianailabs.com
      secretName: website-tls
  rules:
    - host: kadianailabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kadianai-website
                port:
                  number: 80
    - host: www.kadianailabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kadianai-website
                port:
                  number: 80
